--- a/src/menuapp/templates/home.template.html
+++ b/src/menuapp/templates/home.template.html
@@ -1,2 +1,2 @@
-<a ui-sref="home">Welcome to our Restaurant!</a>
-<categories></categories>
+<div>Welcome to our Restaurant!</div>
+<a ui-sref="categories">Categories</a>
