--- a/src/menuapp/templates/items.template.html
+++ b/src/menuapp/templates/items.template.html
@@ -1,3 +1,6 @@
-<li ng-repeat="item in items.items"
-  {{ item.name }}
+<div style="margin-left:200px">
+Items
+<li ng-repeat="item in items.items">
+{{ item.name }}
 </li>
+</div>
