--- a/src/menuapp/templates/items.template.html
+++ b/src/menuapp/templates/items.template.html
@@ -1,5 +1,5 @@
-<div style="margin-left:200px">
-Items
+  <a ui-sref="home">Home</a> &lt; <a ui-sref="categories">Categories</a> &lt; <span>Items</span>
+
 <li ng-repeat="item in items.items">
 {{ item.name }}
 </li>
