--- a/src/menuapp/templates/categories.template.html
+++ b/src/menuapp/templates/categories.template.html
@@ -2,7 +2,7 @@
   <a ui-sref="home">Home</a> &lt; <span>Categories</span>
 
   <li ng-repeat="item in categories.items"
-      ui-sref="categories.items({categoryId: $index})">
+      ui-sref="items({categoryId: $index})">
     {{ item.name }}
   </li>
 
