--- a/src/menuapp/templates/items.template.html
+++ b/src/menuapp/templates/items.template.html
@@ -1,5 +1,7 @@
   <a ui-sref="home">Home</a> &lt; <a ui-sref="categories">Categories</a> &lt; <span>Items</span>
-
+<br/><br/>
+<b>Items</b>
+<br/>
 <li ng-repeat="item in items.items">
 {{ item.name }}
 </li>
